--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -53,6 +53,58 @@ img {
 .burger {
   text-align: center;
 }
+
+.burger-form {
+  margin: 10px 0px;
+}
+
+.burger-actions {
+  text-align: center;
+  margin: 10px 0px;
+}
+
+.burger-actions button {
+  margin: 15px 5px;
+}
+
+.btn-devour {
+  background-color: #fff;
+  color: #0a6ed2f0;
+  border: none;
+}
+
+.btn-devour:hover {
+  text-decoration: underline;
+}
+
+.btn-devour:focus {
+  outline: none;
+}
+
+.list-group-item {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.list-group-item p {
+  margin: 0;
+}
+
+.no-burgers {
+  text-align: center;
+  margin: 25px;
+  color: #0a6ed2f0;
+}
+
+.fas {
+  color: #0a6ed2f0;
+}
+
 /* end burger styles */
 
 /* start left side popup */
@@ -73,12 +125,12 @@ img {
   left: 250px;
   background-color: #fff;
   overflow-x: hidden;
-  padding-top: 60px;
+  padding-top: 56px;
   transition: 0.5s;
 }
 
 .waiting-devoured.left-popup {
-  width: auto;
+  width: 300px;
   margin-left: 0px;
   left: 0px;
 }
@@ -102,12 +154,12 @@ img {
   right: 250px;
   background-color: #fff;
   overflow-x: hidden;
-  padding-top: 60px;
+  padding-top: 56px;
   transition: 0.5s;
 }
 
 .devoured.right-popup {
-  width: auto;
+  width: 300px;
   margin-right: 0px;
   right: 0px;
 }
